--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -15,6 +15,12 @@ layout: default
     enable_page_level_ads: true
   });
 </script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8267943526926430",
+    enable_page_level_ads: true
+  });
+</script>
 
 <div id="main" role="main">
   <article class="splash" itemscope itemtype="http://schema.org/CreativeWork">
@@ -44,8 +50,8 @@ layout: default
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <ins class="adsbygoogle"
           style="display:block"
-          data-ad-client="ca-pub-6670011780914577"
-          data-ad-slot="2889110246"
+          data-ad-client="ca-pub-8267943526926430"
+          data-ad-slot="8645643953"
           data-ad-format="auto"></ins>
       <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
