--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -21,6 +21,12 @@ layout: default
     enable_page_level_ads: true
   });
 </script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8267943526926430",
+    enable_page_level_ads: true
+  });
+</script>
 
 <div id="main" role="main">
   {% include sidebar.html %}
@@ -63,8 +69,8 @@ layout: default
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
           style="display:block"
-          data-ad-client="ca-pub-6670011780914577"
-          data-ad-slot="2889110246"
+          data-ad-client="ca-pub-8267943526926430"
+          data-ad-slot="8645643953"
           data-ad-format="auto">
         </ins>
         <script>
@@ -72,8 +78,8 @@ layout: default
         </script>
           <ins class="adsbygoogle"
           style="display:block"
-          data-ad-client="ca-pub-6670011780914577"
-          data-ad-slot="8734909100"
+          data-ad-client="ca-pub-8267943526926430"
+          data-ad-slot="8645643953"
           data-ad-format="auto">
         </ins>
         <script>
