--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -67,15 +67,16 @@ layout: default
   <hr>
   
   <center>
-  <ins class="adsbygoogle"
-    style="display:block"
-    data-ad-client="ca-pub-8267943526926430"
-    data-ad-slot="8645643953"
-    data-ad-format="horizontal">
-  </ins>
-  <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+	 style="display:block"
+	 data-ad-client="ca-pub-8267943526926430"
+	 data-ad-slot="7687410804"
+	 data-ad-format="auto">
+</ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <ins class="adsbygoogle"
     style="display:block"
     data-ad-client="ca-pub-6670011780914577"
