--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -75,16 +75,16 @@ layout: default
         </ins>
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-          <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-8267943526926430"
-          data-ad-slot="8645643953"
-          data-ad-format="auto">
-        </ins>
-        <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+	 style="display:block"
+	 data-ad-client="ca-pub-8267943526926430"
+	 data-ad-slot="7687410804"
+	 data-ad-format="auto">
+</ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         </center>
 
         <hr>
@@ -104,15 +104,16 @@ layout: default
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
-        <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-8267943526926430"
-          data-ad-slot="8645643953"
-          data-ad-format="horizontal">
-        </ins>
-        <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+	 style="display:block"
+	 data-ad-client="ca-pub-8267943526926430"
+	 data-ad-slot="7687410804"
+	 data-ad-format="auto">
+</ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         </center>
 
       </section>
