--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -49,10 +49,10 @@ layout: default
       <center>
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-6670011780914577"
-          data-ad-slot="7670623049"
-          data-ad-format="auto"></ins>
+        style="display:block"
+        data-ad-client="ca-pub-6670011780914577"
+        data-ad-slot="7670623049"
+        data-ad-format="auto"></ins>
       <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
@@ -65,18 +65,17 @@ layout: default
   </article>
 
   <hr>
-  
+
   <center>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-	 style="display:block"
-	 data-ad-client="ca-pub-8267943526926430"
-	 data-ad-slot="7687410804"
-	 data-ad-format="auto">
-</ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+  <ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-8267943526926430"
+    data-ad-slot="7687410804"
+    data-ad-format="horizontal">
+  </ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
   <ins class="adsbygoogle"
     style="display:block"
     data-ad-client="ca-pub-6670011780914577"
